Fix:  Alignment on responsive-resume.css

--- a/assets/css/responsive-resume.css
+++ b/assets/css/responsive-resume.css
@@ -1,4 +1,4 @@
-body {
+#middle {
     text-align: left;
 }
 
